[package]
name = "nostr-post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
http = "0.2"
nostr-proto = { git = "https://github.com/mikedilger/nostr-proto", branch = "master" }
rand = "0.8"
rpassword = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = { version = "0.17", features = [ "rustls-tls-native-roots" ] }
zeroize = "1.5"
